--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "private": true,
   "version": "0.0.0",
   "type": "module",
-  "homepage": "https://jude-kwofie.github.io/portfolio",
+  "homepage": "https://jude-kwofie.github.io/portifolio/",
   "scripts": {
     "dev": "vite",
     "build": "tsc && vite build",
