--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "styled-components": "^6.0.0-rc.3"
   },
   "devDependencies": {
+    "@types/node": "^20.3.1",
     "@types/react": "^18.0.37",
     "@types/react-dom": "^18.0.11",
     "@typescript-eslint/eslint-plugin": "^5.59.0",
